# magrec

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
2D/Magnetisation/: Evaluate.py  Generator.py  Magnetization.py  Propagator.py  Train.py  utils.py
2D/Notebooks/: Testing_non_uniform_mag_dir.ipynb
Examples/: Example Moire pattern.ipynb  recon_b_components.ipynb  reconstruct Mx and My.ipynb  reconstruct Mxy.ipynb  reconstruct bxyz.ipynb  simulate current.ipynb
Examples/developmental/: reconstruct non uniform Mxy.ipynb
documentation/forward-model/: forward.aux  forward.bcf  forward.fdb_latexmk  forward.fls  forward.out  forward.run.xml  forward.tex
documentation/fourier-space/: fourier-space.org
documentation/multipole-expansion/: multipole.aux  multipole.blg  multipole.fdb_latexmk  multipole.fls  multipole.out  multipole.tex
documentation/setup/: environment-setup.md
documentation/signals/: autocorrelation.org  autocorrelation.py  plot_configuration.yaml
magrec/: __init__.py
magrec/data/: README.md  fcnn_model.pt  model.pt  model_state_dict.pt  model_state_dict_GauFF.pt  model_state_dict_GauFF_denoise.pt  model_state_dict_decay.pt  model_state_dict_po_finer.pt  model_state_dict_po_finer_1000000.pt  the_best_model_1.pt  the_best_model_2.pt
magrec/image_processing/: Filtering.py  Masks.py  Padding.py
magrec/method/: CNN.py  FCNN.py  FCNN_Fspace.py  FCNN_stream.py  GenericMethod.py  cnn_method.py  generic_method.py
magrec/misc/: constants.py  data.py  iplot.py  load.py  plot.py  plotly_plot.py  sampler.py  save.py  test_helpers.py  test_plot.py  test_sampler.py
magrec/models/: Generic.py  Jxy.py  JxyFspace.py  Jxy_stream.py  UniformMagnetisation.py  UniformMxyFspace.py  generic_model.py
magrec/nn/: __init__.py  arch.py  callbacks.py  experiments.py  models.py  modules.py  solver.py  test_batched_curl_div_grad.py  test_div_zero_transform.py  test_fourier_feature_model.py  test_gaussian_fourier_feature_transform.py  test_sample_wavevectors_nd.py  utils.py
magrec/notebooks/: 2023-03-13_09-44 FFC_reconstruction.json  2023-03-13_09-56 FCNN_reconstruction.json  2023-03-13_10-15 CNN_reconstruction.json  2023-03-13_14-21 FCNN_reconstruction.json  Dipole Forward Field Matrix.ipynb  Example.ipynb  Explore.ipynb  (+15 more)
scripts/: current_reconstruction.py  jerschow_reconstruction.py  profile.py  tp_reconstruction.py
(+175 files in other folders)
