[project]
name = "magrec"
version = "0.0.3"

authors = [
  { name="Adrien Dubois", email="adr.dubois@gmail.com" },
  { name="David Broadway", email="broadwayphysics@gmail.com" },
  { name="Mykhailo Flaks", email="mykhailo.flaks@gmail.com"},
]

description = "Source reconstruction from magnetic field measurements"
readme = "README.md"

[build-system]
requires = ["setuptools>=58.2.0", "wheel"]
build-backend = "setuptools.build_meta"