[metadata]
name = magnetisation_reconstruction
version = "0.0.2"
description = code for reconstructing magnetisation from magnetic field images
author = quantum sensing group
license = MIT
license_files = LICENSE
platforms = unix, linux, osx, win32, win64
classifiers = 
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = 
    magnetisation_reconstruction
install_requires = ["hatchling"]
python_requires = >= 3.8
zip_safe = no