[metadata]
name = magrec
version = 0.0.3
author = Adrien Dubois, David Broadway, Mykhailo Flaks
author_email = adr.dubois@gmail.com, broadwayphysics@gmail.com, mykhailo.flaks@gmail.com
description = Source reconstruction from magnetic field measurements
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
install_requires =
    setuptools>=58.2.0
    wheel

[options.packages.find]
exclude =
    tests
    logs
